<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudent"
    android:background="@drawable/gradient_background_main">

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:backgroundTint="#0EAE57"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/back"
        android:backgroundTint="#0EAE57"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_275sdp"
        android:layout_height="@dimen/_165sdp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_1"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_245sdp"
        android:layout_height="@dimen/_135sdp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background_main"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/imie_nazwisko"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:paddingStart="10dp"
            android:background="@drawable/gradient_1"
            android:textColor="@color/white"
            android:hint="@string/tip_name"
            android:textColorHint="#33FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="35dp"
            android:paddingStart="10dp"
            android:background="@drawable/gradient_1"
            android:textColor="@color/white"
            android:hint="@string/tip_surname"
            android:textColorHint="#33FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/spinner2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/idNumber"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="105dp"
            android:paddingStart="10dp"
            android:background="@drawable/gradient_1"
            android:textColor="@color/white"
            android:hint="@string/tip_id"
            android:textColorHint="#33FFFFFF"
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            app:layout_constraintVertical_bias="0"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>